2002-01-16 Wednesday 21:18  michal

	added support for help in plugins: 
	 - currently only for functions 
	 - modified code to show help window to be configurable 
	 - added help files for bullshit and icon plugin 

2002-01-16 Wednesday 21:18  michal

	removed useless todo for paths relative to server root in file
	plugin 

2002-01-16 Wednesday 21:15  michal

	added support for help in plugins: 
	 - currently only for functions 
	 - modified code to show help window to be configurable 
	 - added help files for bullshit and icon plugin 

2002-01-15 Tuesday 20:08  michal

	fixed download link behavio when not in restricted mode 

2002-01-15 Tuesday 15:35  michal

	updated to match current state 

2002-01-15 Tuesday 14:43  michal

	bullshit plugin supports editing and deleting 

2002-01-15 Tuesday 14:42  michal

	bullshit page supports editing and deleting 

2002-01-15 Tuesday 14:12  michal

	file plugin support deleting 

2002-01-15 Tuesday 14:03  michal

	updated todo to fit current state 

2002-01-15 Tuesday 13:56  michal

	many updates according to file page editing: 
	 - added configuration for php highlighting 
	 - file listing dialog supports walking ouside web tree 
	 - added esiting of file page 
	 - fixed some JavaScript issues in file listing dialog (esp.
	 onUload) 
	- few changes in urls and &amp; 
	 - removed useless fields from plugin pages listing 
	 - and maybe something more, but I don't remember it..  

2002-01-15 Tuesday 13:55  michal

	many updates according to file page editing: 
	 - added configuration for php highlighting 
	 - file listing dialog supports walking ouside web tree 
	 - added esiting of file page 
	 - fixed some JavaScript issues in file listing dialog (esp.
	 onUload) 
	- few changes in urls and &amp; 
	 - removed useless fields from plugin pages listing 
	 - and maybe something more, but I don't remember it..  

2002-01-15 Tuesday 11:30  michal

	added support for <pre> file listing 

2002-01-15 Tuesday 11:21  michal
