@@ -1,5 +1,5 @@
 <!DOCTYPE webproject ><webproject>
- <project usePreviewPrefix="1" preview="http://wessie.cic/" previewPrefix="http://wessie.cic/" type="Local" name="wessie" >
+ <project usePreviewPrefix="1" preview="http://wessie.cic/" type="Local" previewPrefix="http://wessie.cic/" name="wessie" >
   <upload/>
   <author>Michal Cihar</author>
   <email>cihar@email.cz</email>
@@ -130,6 +130,7 @@
   <item url="plugins/bullshit/function_help.php" />
   <item url="admin/plugin_help.php" />
   <item url="plugins/icons/function_help.php" />
+  <item url="admin/files_action.php" />
  </project>
 </webproject>
 <!-- $Id$ -->
